fix: header align items

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -12,20 +12,26 @@
 
 .titleContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 0.5rem;
 }
 
 .title {
   font-weight: 600;
 }
+
 .searchContainer {
   width: 100%;
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-start;
-  gap: 2rem;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0.75rem;
   padding: 1rem;
+}
+
+.logo {
+  padding-top: 4px;
 }
 
 .accountContainer {
@@ -33,6 +39,9 @@
   align-items: center;
   justify-content: flex-end;
   gap: 1rem;
+  position: absolute;
+  top: 0;
+  right: 1rem;
   padding: 1rem;
 }
 
@@ -49,24 +58,20 @@
   object-fit: cover;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .titleContainer {
-    display: flex;
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .searchContainer {
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
     gap: 0.75rem;
-    padding: 1rem;
+    gap: 2rem;
   }
 
   .accountContainer {
-    position: absolute;
-    top: 0;
-    right: 1rem;
-    padding: 1rem;
+    position: inherit;
   }
 }
